# hawkbit-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HACKING.md  NOTICE.md  README.md  RELEASING.md  TODO.md
.github/: Dockerfile  ct.yaml
.github/workflows/: ci.yaml
crds/: hawkbit.crd.yaml
examples/: override.yaml  simple-embedded.yaml  simple-keycloak.yaml  simple-mysql.yaml  simple-postgres.yaml  simple.yaml
examples/sso/: 10-instance.yaml  20-realm.yaml  30-client.yaml  40-admin-user.yaml
helm/: README.md
helm/hawkbit-operator/: Chart.yaml  README.md  values.yaml
helm/hawkbit-operator/ci/: ci-values.yaml
helm/hawkbit-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rolbinding.yaml  role.yaml  s2i.yaml  serviceaccount.yaml
olm/hawkbit-operator-bundle/: hawkbit-operator.package.yaml
olm/hawkbit-operator-bundle/0.1.0/: hawkbit-operator.v0.1.0.clusterserviceversion.yaml
olm/hawkbit-operator-bundle/0.1.1/: hawkbit.crd.yaml
olm/hawkbit-operator-bundle/0.1.2/: hawkbit-operator.v0.1.2.clusterserviceversion.yaml  hawkbit.crd.yaml
olm/hawkbit-operator-bundle/0.1.3/: hawkbit-operator.v0.1.3.clusterserviceversion.yaml
olm/hawkbit-operator-bundle/0.1.4/: hawkbit-operator.v0.1.4.clusterserviceversion.yaml
olm/hawkbit-operator-bundle/0.1.5/manifests/: hawkbit-operator.v0.1.5.clusterserviceversion.yaml
src/: controller.rs  crd.rs  main.rs
src/controller/: keycloak.rs  mod.rs  rabbit.rs
src/data/: create_user.sql
