[package]
name = "hawkbit-operator"
version = "0.1.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "EPL-2.0"

[dependencies]

kube = "0.37"
kube-derive = "0.37"
k8s-openapi = { version = "0.9.0", default-features = false }
openshift-openapi = { version = "0.1.0", default-features = false, features = ["v4_3"] }
operator-framework = { version = "0.3.3", features = [ "v1_16" ] }

passwords = { version = "3.1.3", features = ["crypto"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"

tokio = { version = "0.2", features = ["full"] }

futures-util = "0.3"
futures = "0.3"
anyhow = "1.0"

async-trait = "0.1"
async-std = "1.5"

percent-encoding = "2.1.0"

log = "0.4"
env_logger = "0.7"
rand = "0.7"
sha1 = "0.6"

string-error = "0.1.0"

[patch.crates-io]
#k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi.git#b8046d9a" }
#kube = { git = "https://github.com/clux/kube-rs", branch="master" }
#kube-derive = { git = "https://github.com/clux/kube-rs", branch="master" }
#operator-framework = { path = "/home/jreimann/git/operator-framework" }

